--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://:3306/warehouse
+spring.datasource.url=jdbc:mysql://192.168.43.138:3306/Central
 spring.datasource.username=remote
-spring.datasource.password=password
+spring.datasource.password=Password@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
