Azure Mysql db details added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://trainingprojectserver.mysql.database.azure.com:3306/devbankdb?useSSL=true&requireSSL=false
+spring.datasource.username=superuser@trainingprojectserver
+spring.datasource.password=Password@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
