--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=Password@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
+server.port=9099
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=apptest0786@gmail.com
