Passwords removed from files for security reason

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://trainingprojectserver.mysql.database.azure.com:3306/devbankdb?useSSL=true&requireSSL=false
 spring.datasource.username=superuser@trainingprojectserver
-spring.datasource.password=Password@123
+spring.datasource.password=<Here goes your database password>
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -8,7 +8,7 @@ server.port=9099
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=apptest0786@gmail.com
-spring.mail.password=Aakharipasta
+spring.mail.password=<Here goes your email password>
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
